--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <ul id="list-container">
             </ul>
         </div>
+        <footer>Developed by Anti. G</footer>
     </div>
     <script src="index.js"></script>
 </body>
