--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul id="list-container">
             </ul>
         </div>
-        <footer>Developed by Anti. G</footer>
+        <p>Developed by Anti. G</p>
     </div>
     <script src="index.js"></script>
 </body>
