--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <button onclick="AddTask( )">Add</button>
             </div>
             <ul id="list-container">
+                <li>Developed by Anti. G</li>
             </ul>
-             <p>Developed by Anti. G</p>
         </div>
     </div>
     <script src="index.js"></script>
