--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do List <img src="../images/icon.png"></h2>
+            <h2>To-Do List <img src="./images/icon.png"></h2>
             <div class="row">
                  <input type="text" id="input-box" placeholder="Add your text">
                 <button onclick="AddTask( )">Add</button>
